# wednesday-world-cup

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile.toml  README.md  Rocket.toml
api/: Cargo.toml
api/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: team_stats.rs
core/src/: error.rs  fair_play.rs  game.rs  lib.rs  player.rs  pred_score.rs  team.rs
core/src/group/: game.rs  mod.rs  order.rs  stats.rs
core/src/playoff/: bracket.rs  game.rs  mod.rs  template.rs  templates.rs  transition.rs
core/src/utils/: date.rs  mod.rs  serde_date.rs
data/: Cargo.toml  README.md
data/fixture_download/: README.md  fifa-world-cup-2022.json  uefa-euro-2024.json
data/lsv_data/: complete-fifa-2018.json
data/src/: file_io.rs  lib.rs  lsv.rs
data/src/lsv/: euro_2020.rs  euro_2021.rs  fifa_2018.rs  mod.rs
data/src/lsv/euro_2020/: group.rs  mod.rs  playoff.rs
data/src/lsv/fifa_2018/: group.rs  mod.rs  playoff.rs
data/tests/: data  group.rs  parse_data.rs  playoff.rs
data/tests/data/: eu-2021.json
db/: Cargo.toml  README.md
db/migrations/2020-10-16-130834_create_games/: up.sql
db/migrations/2020-10-20-080635_create_teams/: up.sql
db/migrations/2020-10-23-104854_create_group_game_map/: down.sql  up.sql
db/migrations/2021-01-20-152626_create_preds/: down.sql  up.sql
db/migrations/2021-01-30-131255_create_players/: up.sql
db/sqlx_migrations/: 001_create_tables.sql  002_playoff_tables.sql  003_auth_tables.sql
db/src/: auth.rs  games.rs  group.rs  lib.rs  main.rs  models.rs  player.rs  playoff.rs  pool.rs  schema.rs  sqlx_impl.rs  team.rs
server/: Cargo.toml  Rocket.toml
server/data/: wc-2018.json
server/src/: auth.rs  err.rs  main.rs  public.rs  user.rs
src/: data.rs  fair_play.rs  group.rs  lib.rs  team.rs
src/data/: lsv.rs  mod.rs
src/game/: group.rs  mod.rs  playoff.rs
src/group/: game.rs  mod.rs  order.rs  stats.rs
src/playoff/: game.rs
src/utils/: mod.rs
test_db/: Cargo.toml
test_db/migrations/2020-10-16-123454_create_posts/: up.sql
test_db/migrations/2020-10-16-130834_create_games/: up.sql
test_db/src/: db.rs  lib.rs  main.rs  models.rs
test_db/src/db/: models.rs
tests/: group.rs  parse_data.rs
ui/: .gitignore  Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html
ui/css/: groups.css  index.css  playoff.css
ui/src/: app.rs  auth.rs  data.rs  format.rs  game.rs  group.rs  lib.rs  playoff.rs  playoff_game.rs  table.rs  team.rs
ui/src/pages/: login.rs  mod.rs  predictions_view.rs
ui/templates/: base.html
