[package]
name = "wednesday_world_cup"
version = "0.1.0"
authors = ["sp_user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.5"
thiserror = "1"
num = "0.2.1"
serde = {version = ">=1", features =["derive"]}
serde_json = ">=1"
chrono = ">=0.4"
itertools = ">=0.9.0"

[dev-dependencies]
more-asserts = "0.2.1"
rand = "0.7.3"
