[package]
name = "wwc_cli"
version = "0.1.0"
authors = ["Jacko Jackonelli <jakob.lindqvist.92@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.11"
itertools = ">=0.9"
thiserror = ">=1.0"
wwc_core = {path = "../core"}
wwc_data = {path = "../data"}
wwc_db = {path = "../db"}
