[package]
name = "wwc_core"
version = "0.1.0"
authors = ["Jacko Jackonelli <jakob.lindqvist.92@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.99.5"
thiserror = "1"
num = "0.2.1"
serde = {version = ">=1", features =["derive"]}
chrono = ">=0.4"
itertools = ">=0.9.0"
rand = "0.7.3"

[dev-dependencies]
serde_json = ">=1"
more-asserts = "0.2.1"
rand = "0.7.3"
wasm-bindgen-test = "0.2"
