[package]
name = "wwc_core"
version = "0.1.0"
authors = ["Jacko Jackonelli <jakob.lindqvist.92@gmail.com>"]
edition = "2018"

[profile.release]
debug=true
lto=false

[dependencies]
derive_more = ">=0.99"
thiserror = ">=1.0"
num = ">=0.3"
serde = {version = ">=1", features =["derive"]}
chrono = ">=0.4"
itertools = ">=0.9.0"
rand = ">=0.7"

[dev-dependencies]
criterion = ">=0.3"
assert_approx_eq = ">=1"
serde_json = ">=1"
more-asserts = "0.2.1"
rand = ">=0.7"
wasm-bindgen-test = "0.2"

[[bench]]
name = "team_stats"
harness = false
