[package]
name = "wwc_core"
version = "0.1.0"
authors = ["Jacko Jackonelli <jakob.lindqvist.92@gmail.com>"]
edition = "2024"

[dependencies]
derive_more = {version = "2", features =["full"]}
thiserror = ">=1.0"
num = ">=0.4"
serde = {version = ">=1", features =["derive"]}
chrono = ">=0.4"
itertools = ">=0.10.0"
rand = ">=0.8"

[dev-dependencies]
assert_approx_eq = ">=1"
serde_json = ">=1"
more-asserts = "0.2.1"
wasm-bindgen-test = "0.2"
pprof = { version = ">=0.3", features = ["flamegraph"] }
