[package]
name = "wwc_db"
version = "0.1.0"
authors = ["Jacko Jackonelli <jakob.lindqvist.92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = ">=1.4", default-features = false, features = ["sqlite"]}
serde = {version = ">=1", features =["derive"]}
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.14.0"
wwc_core = {path = "../core"}
