[package]
name = "wwc_db"
version = "0.1.0"
authors = ["Jacko Jackonelli <jakob.lindqvist.92@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# SQLx for async database access
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = {version = ">=1", features =["derive"]}
serde_json = ">=1.0"
dotenv = ">=0.14"
wwc_core = {path = "../core"}
thiserror = ">=1.0"
itertools = ">=0.9"
