[package]
name = "wwc_server"
version = "0.1.0"
authors = ["Jakob <jakob.lindqvist@chalmers.se>"]
edition = "2018"

[dependencies]
wwc_core = {path = "../core"}
wwc_db = {path = "../db"}
serde = {version = ">=1", features = ["derive"]}
serde_json = ">=1"
thiserror = ">=1"
rocket = ">=0.4"
rocket_contrib = ">=0.4"
rocket_cors = "0.5.1"
itertools = ">=0.9"
