[package]
name = "wwc_server"
version = "0.1.0"
authors = ["Jakob <jakob.lindqvist@chalmers.se>"]
edition = "2024"

[dependencies]
wwc_core = {path = "../core"}
wwc_db = {path = "../db"}
serde = {version = ">=1", features = ["derive"]}
serde_json = ">=1"
thiserror = ">=1"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
itertools = ">=0.9"
