[package]
name = "wwc_server"
version = "0.1.0"
authors = ["Jakob <jakob.lindqvist@chalmers.se>"]
edition = "2024"

[dependencies]
wwc_core = {path = "../core"}
wwc_db = {path = "../db"}
serde = {version = ">=1", features = ["derive"]}
serde_json = ">=1"
thiserror = ">=1"
# Axum web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite"] }
# Utilities
itertools = ">=0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Auth
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = "0.4"
