[package]
name = "wwc_ui"
repository = "https://github.com/jackonelli/wwc_ui/"
description = "WASM/Seed crate, defining a UI for WWC"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Jacko Jackonelli"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = ">=1.0"
serde = "1.0.112"
serde_json = ">=1.0"
ulid = {version = "0.4.0", features = ["serde"]}
seed = ">=0.7"
wasm-bindgen = "^0.2.50"
web-sys = "^0.3.27"
strum = "0.18.0"
strum_macros = "0.18.0"
wwc_core = {path = "../core"}
