[package]
name = "wwc_ui"
repository = "https://github.com/jackonelli/wwc_ui/"
description = "WASM/Seed crate, defining a UI for WWC"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Jacko Jackonelli"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
thiserror = ">=1.0"
serde = { version = "1.0.112", features = ["derive"] }
serde_json = ">=1.0"
ulid = { version = "0.4.0", features = ["serde"] }
wasm-bindgen = "^0.2.50"
web-sys = "^0.3.27"
strum = "0.18.0"
strum_macros = "0.18.0"
wwc_core = { path = "../core" }
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"
